# LinuxDataStruct

./: CMakeLists.txt  main.cpp
include/: list.h
problem/: getK.cpp
